# lpaggreg

./: .cproject  .gitignore  .project  CMakeLists.txt  Licence_CeCILL-C_V1-en.txt  README.md  install-bench.sh  install-shared.sh  install-static.sh  install-static32.sh  install.sh  makefile
.packaging/: version
.packaging/marenostrum/: deploy  push  settings  version
.packaging/minotauro/: deploy  settings
Bench/src/: subdir.mk
R/: cholesky_11520_960_starpu_25_3_dmda_1_idcin-2.grenoble.grid5000.fr_2016-08-21_20-49-12_pjdump.csv  example.R  lpaggreg.R  lpaggreg.Rout  lpaggreg2.R  nemo.exe.128tasks.chop1.clustered.pjdump  parsepjdump.R
Release/: makefile
Release/src/: Eval.d  ILPAggreg.d  LPAggreg.d  LPAggregWrapper.d  LPAggregationAlgorithm.d  LPValues.d  MLPAggregWrapper.d  MatrixLPAggreg.d  MatrixNodeLPAggreg.d  NLPAggreg.d  NLPAggreg1.d  NLPAggreg2.d  NLPAggreg3.d  Node.d  NodeLPAggreg.d  NodeLPAggregWrapper.d  OLPAggreg.d  OLPAggreg1.d  OLPAggreg2.d  OLPAggreg3.d  ScalarLPAggreg.d  ScalarLPAggregationAlgorithm.d  ScalarNodeLPAggreg.d  VLPAggregWrapper.d  VectorLPAggreg.d  VectorLPAggregationAlgorithm.d  VectorNodeLPAggreg.d  VectorWrapper.d  lpaggreg_wrap.d  subdir.mk
Shared/: makefile  sources.mk
Static32/: makefile
bench-linux/: makefile  sources.mk
openmp/: libopenmplpaggreg.so.3.1  makefile
openmp/src/: Complexity.d  Compromise.d  DLPAggreg.d  DLPAggreg1.d  DLPAggreg2.d  DLPAggregWrapper.d  DLPCut.d  Eval.d  NLPAggreg.d  NLPAggreg1.d  NLPAggreg2.d  NLPAggreg3.d  OLPAggreg.d  OLPAggreg1.d  OLPAggreg2.d  OLPAggreg3.d  OLPAggregWrapper.d  Quality.d  subdir.mk
qtproject/: lpaggreg.pro
shared-linux/: makefile  sources.mk
shared-linux/shared-linux2/src/: subdir.mk
src/: CMakeLists.txt  Complexity.cpp  Complexity.h  Compromise.cpp  Compromise.h  Configuration.h  DLPAggreg.cpp  DLPAggreg.h  DLPAggreg1.cpp  DLPAggreg1.h  DLPAggreg2.cpp  DLPAggreg2.h  DLPAggregWrapper.cpp  DLPAggregWrapper.h  DLPCut.cpp  DLPCut.h  DLPPartition.cpp  DLPPartition.h  Eval.cpp  Eval.h  ILPAggreg.cpp  ILPAggreg.h  LPAggreg.cpp  LPAggreg.h  LPAggreg.tpp  LPAggregWrapper.cpp  LPAggregWrapper.h  LPAggregationAlgorithm.cpp  LPAggregationAlgorithm.h  LPValues.cpp  LPValues.h  LPValues.tpp  MLPAggregWrapper.cpp  MLPAggregWrapper.h  MatrixLPAggreg.cpp  MatrixLPAggreg.h  MatrixNodeLPAggreg.cpp  MatrixNodeLPAggreg.h  NLPAggreg.cpp  NLPAggreg.h  (+50 more)
src/lpaggreg/: CMakeLists.txt
src/lpaggreg-reader/: CMakeLists.txt
src/lpaggreg-reader/headers/: micromodelparser.h
src/lpaggreg-reader/sources/: main.cpp  micromodelparser.cpp
src/lpaggreg/headers/: Complexity.h  Configuration.h  DLPAggregWrapper.h  Eval.h  LPValues.h  NLPAggreg3.h  OLPAggreg.h  OLPAggreg1.h  OLPAggreg3.h  Quality.h  Tradeoff.h  daggregation.h  daggregationn.h  dpartition.h  dpartitioner.h  dqualities.h  dvalues.h  dvaluesn.h  haggregation.h  haggregationn.h  hpartition.h  hpartitioner.h  hqualities.h  hvalues.h  hvaluesn.h  item.h  lpglobal.h  lpitem.h  lpquality.h  oaggregation.h  oaggregationn.h  opartition.h  opartitioner.h  oqualities.h  ovalues.h  ovaluesn.h  partitioner.h  quality.h  tradeoff.h  uppertriangularmatrix.h
src/lpaggreg/sources/: DLPAggreg.cpp  DLPAggreg1.cpp  DLPAggreg2.cpp  NLPAggreg.cpp  NLPAggreg2.cpp  OLPAggreg.cpp  OLPAggreg1.cpp  Tradeoff.cpp  complexity.cpp  daggregation.cpp  daggregationn.cpp  dpartition.cpp  dpartitioner.cpp  dqualities.cpp  dvalues.cpp  dvaluesn.cpp  haggregationn.cpp  hpartition.cpp  hpartitioner.cpp  hqualities.cpp  hvalues.cpp  hvaluesn.cpp  lporderedsystem.cpp  lppartitioner.cpp  lpsystem.cpp  oaggregation.cpp  oaggregationn.cpp  opartition.cpp  opartitioner.cpp  oqualities.cpp  ovalues.cpp  ovaluesn.cpp  partitioner.cpp  qualities.cpp  quality.cpp  tradeoff.cpp  uppertriangularmatrix.cpp
static-linux-x86/Shared/src/: subdir.mk
static-linux-x86/src/: subdir.mk
static-win32/: makefile  sources.mk
static-win32/Static/src/: subdir.mk
static-win32/src/: subdir.mk
static-win64/: makefile  sources.mk
static-win64/src/: subdir.mk
static-win64/static-win/src/: subdir.mk
swig/: lpaggreg.i  swig.sh
test/: CMakeLists.txt
test/dpartitioner_2d_standard/: CMakeLists.txt
test/dpartitioner_2d_standard/sources/: test.cpp
test/hpartitioner_1d_advanced/: CMakeLists.txt
test/hpartitioner_1d_advanced/sources/: test.cpp
test/hpartitioner_1d_standard/: CMakeLists.txt
test/hpartitioner_1d_standard/sources/: test.cpp
test/hpartitioner_2d_advanced/: CMakeLists.txt
test/hpartitioner_2d_standard/: CMakeLists.txt
test/hpartitioner_3d_advanced/: CMakeLists.txt
test/hpartitioner_3d_advanced/sources/: test.cpp
test/hpartitioner_3d_standard/: CMakeLists.txt
test/hpartitioner_4d_advanced/: CMakeLists.txt
test/hpartitioner_4d_standard/: CMakeLists.txt
test/opartitioner/: CMakeLists.txt
test/opartitioner/sources/: test_opartition.cpp
test/opartitioner_1d_advanced/: CMakeLists.txt
test/opartitioner_1d_advanced/sources/: test.cpp
test/opartitioner_1d_standard/: CMakeLists.txt
test/opartitioner_1d_standard/sources/: test.cpp
test/opartitioner_2d_advanced/: CMakeLists.txt
test/opartitioner_2d_advanced/sources/: test.cpp
test/opartitioner_2d_standard/: CMakeLists.txt
test/opartitioner_2d_standard/sources/: test.cpp
test/opartitioner_3d_advanced/: CMakeLists.txt
test/opartitioner_3d_advanced/sources/: test.cpp
test/opartitioner_3d_standard/: CMakeLists.txt
test/opartitioner_3d_standard/sources/: test.cpp
test/opartitioner_4d_advanced/: CMakeLists.txt
test/opartitioner_4d_advanced/sources/: test.cpp
test/opartitioner_4d_standard/: CMakeLists.txt
test/opartitioner_4d_standard/sources/: test.cpp
test/test_opartitioner/: CMakeLists.txt
test/test_opartitioner/sources/: test_opartitioner.cpp
