cmake_minimum_required(VERSION 2.8)

add_subdirectory(opartitioner_1d_standard)
add_subdirectory(opartitioner_1d_advanced)
add_subdirectory(opartitioner_2d_standard)
add_subdirectory(opartitioner_2d_advanced)
add_subdirectory(opartitioner_3d_standard)
add_subdirectory(opartitioner_3d_advanced)
add_subdirectory(opartitioner_4d_standard)
add_subdirectory(opartitioner_4d_advanced)
add_subdirectory(hpartitioner_1d_standard)
