cmake_minimum_required(VERSION 2.8)

project(lpaggreg)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_HOME_DIRECTORY}/src/lpaggreg/*.*)
set(HEADER_DIR ${CMAKE_HOME_DIRECTORY}/src/lpaggreg/headers)
FILE(GLOB HEADER_FILES ${HEADER_DIR}/*.h)
INCLUDE_DIRECTORIES(${HEADER_DIR})

if(STATIC)
    add_library(${PROJECT_NAME} STATIC ${SRC_FILES})
else(STATIC)
    add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
endif(STATIC)

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${LPAGGREG_VERSION} SOVERSION ${LPAGGREG_VERSION_MAJOR})
set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

set(${PROJECT_NAME}_INCLUDE_DIRS ${HEADER_DIR} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${HEADER_FILES} DESTINATION include/${PROJECT_NAME})
